<resources>
    <string name="app_name">OMDB viewer</string>

    <string name="search">Search</string>
    <string name="no_search_text">Write something to search.</string>
    <string name="no_results">No results found!</string>
    <string name="error_message">An error occurred!</string>

    <string name="imdb_score">Imdb score</string>
    <string name="rotten_tomatoes">Rotten Tomatoes</string>
    <string name="metacritic">Metacritic</string>
    <string name="directed_by">Directed by</string>
    <string name="written_by">Written by</string>
    <string name="starring">Starring</string>
</resources>
